--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -84,7 +84,7 @@
         <fa-icon [icon]="searchIcon" class="color-green"></fa-icon>
       </div>
     </div>
-    <div ngbDropdown class="d-inline-block header-row-item" *ngIf="otherPools.length > 0">
+    <div ngbDropdown display="dynamic" class="d-inline-block header-row-item" *ngIf="otherPools.length > 0">
       <button class="btn btn-outline-light dark-background other-pools-button" id="poolsDropdown" ngbDropdownToggle>
         {{snippetService.getSnippet('header-component.button.other-pools')}}
       </button>
