--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
+$form-select-indicator-color: #cfd0d1;
+
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/mixins';
+@import 'bootstrap/scss/bootstrap';
 @import 'ngx-toastr/toastr-bs5-alert';
 
 .table th {
