--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -65,34 +65,36 @@
         </a>
       </li>
     </ul>
-    <div class="header-row-item" *ngIf="showLogoutButton">
-      <button class="btn dark-background btn-outline-danger logout-button" (click)="accountService.logout()">{{snippetService.getSnippet('header-component.button.logout')}}</button>
-    </div>
-    <div class="header-row-item" *ngIf="ratesService.currencies && ratesService.currencies.length > 0">
-      <app-currency-selector></app-currency-selector>
-    </div>
-    <div class="input-group header-row-item search-input">
-      <input
-        class="form-control dark-background"
-        type="search"
-        [(ngModel)]="accountSearchInput"
-        [placeholder]="accountSearchInputPlaceholder"
-        (keyup.enter)="search()"
-        aria-label="Search"
-      >
-      <div class="input-group-text dark-background search-button" (click)="search()">
-        <fa-icon [icon]="searchIcon" class="color-green"></fa-icon>
+    <div class="d-flex flex-wrap">
+      <div class="header-row-item" *ngIf="showLogoutButton">
+        <button class="btn dark-background btn-outline-danger logout-button" (click)="accountService.logout()">{{snippetService.getSnippet('header-component.button.logout')}}</button>
       </div>
-    </div>
-    <div ngbDropdown display="dynamic" class="d-inline-block header-row-item" *ngIf="otherPools.length > 0">
-      <button class="btn btn-outline-light dark-background other-pools-button" id="poolsDropdown" ngbDropdownToggle>
-        {{snippetService.getSnippet('header-component.button.other-pools')}}
-      </button>
-      <div ngbDropdownMenu aria-labelledby="poolsDropdown">
-        <div *ngFor="let pool of otherPools; let i = index" [attr.data-index]="i">
-          <h6 *ngIf="!getPool(i - 1) || getPool(i - 1).algorithm !== pool.algorithm" class="dropdown-header">{{pool.algorithm}}</h6>
-          <a class="text-decoration-none" ngbDropdownItem href="{{pool.url}}" target="_blank">{{pool.name}}</a>
-          <div *ngIf="getPool(i + 1) && getPool(i + 1).algorithm !== pool.algorithm" class="dropdown-divider"></div>
+      <div class="header-row-item" *ngIf="ratesService.currencies && ratesService.currencies.length > 0">
+        <app-currency-selector></app-currency-selector>
+      </div>
+      <div class="input-group header-row-item search-input">
+        <input
+          class="form-control dark-background"
+          type="search"
+          [(ngModel)]="accountSearchInput"
+          [placeholder]="accountSearchInputPlaceholder"
+          (keyup.enter)="search()"
+          aria-label="Search"
+        >
+        <div class="input-group-text dark-background search-button" (click)="search()">
+          <fa-icon [icon]="searchIcon" class="color-green"></fa-icon>
+        </div>
+      </div>
+      <div ngbDropdown display="dynamic" class="d-inline-block header-row-item" *ngIf="otherPools.length > 0">
+        <button class="btn btn-outline-light dark-background other-pools-button" id="poolsDropdown" ngbDropdownToggle>
+          {{snippetService.getSnippet('header-component.button.other-pools')}}
+        </button>
+        <div ngbDropdownMenu aria-labelledby="poolsDropdown">
+          <div *ngFor="let pool of otherPools; let i = index" [attr.data-index]="i">
+            <h6 *ngIf="!getPool(i - 1) || getPool(i - 1).algorithm !== pool.algorithm" class="dropdown-header">{{pool.algorithm}}</h6>
+            <a class="text-decoration-none" ngbDropdownItem href="{{pool.url}}" target="_blank">{{pool.name}}</a>
+            <div *ngIf="getPool(i + 1) && getPool(i + 1).algorithm !== pool.algorithm" class="dropdown-divider"></div>
+          </div>
         </div>
       </div>
     </div>
