--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -1,7 +1,8 @@
 <div class="card">
   <div class="card-header d-flex justify-content-between align-items-center">
     <div>
-      <h5>
+      <h5 class="d-flex align-items-center gap-1">
+        <span *ngIf="(statusDotColorClass$ | async) !== null" class="dot" [ngClass]="statusDotColorClass$ | async" ngbTooltip="Last updated {{relativeLastUpdated$ | async}}"></span>
         <editable [enabled]="canEditName" (save)="updateName()" (cancel)="cancelNameUpdate()">
           <ng-template viewMode>
             <div class="d-flex harvester-name-or-peer-id-container">
@@ -14,20 +15,21 @@
             <input editableOnEnter editableOnEscape class="form-control harvester-name-input" type="text" [formControl]="nameControl"/>
           </ng-template>
         </editable>
+        <span *ngIf="(status$ | async) !== null" class="badge status-pill" [ngClass]="statusDotColorClass$ | async" [ngbTooltip]="statusTooltip$ | async">{{status$ | async}}</span>
       </h5>
       <div *ngIf="hasName">{{peerIdSlug}}</div>
     </div>
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between align-items-baseline gap-3">
       <select class="form-select dark-background" [ngModel]="chartMode | async" (ngModelChange)="setChartMode($event)">
         <option [value]="ChartMode.shares">Shares</option>
         <option [value]="ChartMode.proofTimes">Proof times</option>
       </select>
       <fa-icon
         *ngIf="accountService.haveAuthToken"
-        class="ms-3 highlight"
+        class="highlight"
         [icon]="faEllipsisV"
         size="2xl"
-        style="cursor: pointer; margin-top: 0.2rem;"
+        style="cursor: pointer; margin-bottom: 0.2rem;"
         (click)="openSettingsModal()"
       ></fa-icon>
     </div>
