--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,8 +36,9 @@ html, body {
   background-color: #2f3136;
 }
 .dot {
-  height: 10px;
-  width: 10px;
+  margin-top: 3px;
+  height: 0.66rem;
+  width: 0.66rem;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -52,23 +53,15 @@ $color-red: rgb(255, 77, 77);
 $color-grey: rgb(140, 140, 140);
 $color-dark-orange: rgb(204, 147, 33);
 $color-green-orange: #b9a44c;
-span[green] {
-  background-color: $color-light-green;
-}
-span[orange] {
-  background-color: $color-orange;
-}
-span[blue] {
-  background-color: $color-blue;
-}
-span[red] {
-  background-color: $color-red;
-}
+
 .background-color-light-green {
   background-color: $color-light-green;
 }
 .background-color-orange {
   background-color: $color-orange;
+}
+.background-color-red {
+  background-color: $color-red;
 }
 .color-green {
   color: $color-green;
