Add light mode, closes #8

--- a/src/app/blocks-won/blocks-won.component.html
+++ b/src/app/blocks-won/blocks-won.component.html
@@ -5,7 +5,7 @@
   </h5>
 </div>
 <div class="table-responsive-lg">
-  <table class="table dark-theme">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">
