--- a/src/app/payouts/payouts.component.html
+++ b/src/app/payouts/payouts.component.html
@@ -1,6 +1,6 @@
 <h5>{{snippetService.getSnippet('payouts-component.title')}}</h5>
 <div class="table-responsive-lg">
-  <table class="table dark-theme">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">
