--- a/src/app/currency-selector/currency-selector.component.html
+++ b/src/app/currency-selector/currency-selector.component.html
@@ -1,8 +1,8 @@
 <div class="input-group">
-  <select class="form-select currency-select dark-background" [ngModel]="configService.selectedCurrencySubject | async" (ngModelChange)="configService.selectedCurrencySubject.next($event)">
+  <select class="form-select currency-select input-field" [ngModel]="configService.selectedCurrencySubject | async" (ngModelChange)="configService.selectedCurrencySubject.next($event)">
     <option *ngFor="let currency of ratesService.currencies" [ngValue]="currency" class="currency-select-option">{{ currency.toUpperCase() }}</option>
   </select>
-  <label class="input-group-text dark-background currency-select-rate-label hide-on-smaller-screens">
+  <label class="input-group-text currency-select-rate-label hide-on-smaller-screens">
     1 {{(statsService.ticker$ | async)?.toUpperCase()}} ≈ {{rateForCurrencyFormatted | async}}
   </label>
 </div>
