--- a/src/app/currency-selector/currency-selector.component.scss
+++ b/src/app/currency-selector/currency-selector.component.scss
@@ -15,15 +15,14 @@
   border: transparent;
 }
 .currency-select-option {
-  background-color: #262629;
-}
-.dark-background {
-  background-color: #262629;
-  color: #cfd0d1;
-  border-color: #6c757d;
+  background-color: var(--select-item-background-color);
 }
 .currency-select-rate-label {
   font-size: small;
+  background-color: var(--input-field-background-color);
+  color: var(--text-color);
+  border-color: var(--input-field-border-color);
+  border-left: 0;
 }
 @media (min-width: 1200px) and (max-width: 1420px) {
   .hide-on-smaller-screens {
