--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -6,5 +6,5 @@
   text-align: left;
 }
 ::ng-deep .progress {
-  background-color: #262629 !important;
+  background-color: var(--progress-bar-background-color) !important;
 }
