--- a/src/app/farmer-list/farmer-list.component.html
+++ b/src/app/farmer-list/farmer-list.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive-lg">
-  <table class="table dark-theme">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">Rank</th>
