--- a/src/app/farmer-payout-history/farmer-payout-history.component.html
+++ b/src/app/farmer-payout-history/farmer-payout-history.component.html
@@ -5,13 +5,13 @@
 </div>
 <div class="row justify-content-end">
   <div class="col-auto">
-    <button *ngIf="payouts.getValue().length > 0" type="button" class="btn btn-outline-info btn-sm" style="margin-top: 0.5rem;float: right" (click)="exportCsv()">{{snippetService.getSnippet('download-csv-button.title')}}</button>
+    <button *ngIf="payouts.getValue().length > 0" type="button" class="btn btn-sm" [ngClass]="exportCsvButtonClasses" style="margin-top: 0.5rem;float: right" (click)="exportCsv()">{{snippetService.getSnippet('download-csv-button.title')}}</button>
   </div>
 </div>
 <div class="row">
   <div class="col-12">
     <div class="table-responsive-lg">
-      <table class="table dark-theme">
+      <table class="table">
         <thead>
           <tr>
             <th scope="col">
