--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -20,7 +20,7 @@
       <div *ngIf="hasName">{{peerIdSlug}}</div>
     </div>
     <div class="d-flex justify-content-between align-items-center gap-3">
-      <select class="form-select dark-background" [ngModel]="chartMode | async" (ngModelChange)="setChartMode($event)">
+      <select class="form-select input-field" [ngModel]="chartMode | async" (ngModelChange)="setChartMode($event)">
         <option [value]="ChartMode.shares">Shares</option>
         <option [value]="ChartMode.proofTimes">Proof times</option>
       </select>
