--- a/src/app/top-accounts/top-accounts.component.html
+++ b/src/app/top-accounts/top-accounts.component.html
@@ -2,7 +2,7 @@
   <h5>{{snippetService.getSnippet('top-accounts-component.title')}}</h5>
 </div>
 <div class="table-responsive-sm">
-  <table class="table dark-theme">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">{{snippetService.getSnippet('top-accounts-component.headers.address')}}</th>
