--- a/src/app/version-info/version-info.component.html
+++ b/src/app/version-info/version-info.component.html
@@ -6,6 +6,7 @@
       *ngIf="versionUpdateTooltip !== undefined"
       [icon]="faInfoCircle"
       [ngbTooltip]="versionUpdateTooltip"
+      class="version-info-icon"
     ></fa-icon>
   </div>
 </div>
