Fix navbar in light mode

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl navbar-dark sticky-navbar">
+<nav class="navbar navbar-expand-xl sticky-navbar" [ngClass]="navbarClasses">
   <a class="navbar-brand text-decoration-none">
     <img ngSrc="https://static.foxypool.io/assets/icon/fox.svg" width="34" height="34" alt="">
     <span class="pool-title">{{poolTitle}}</span>
