Darken sun icon

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -131,7 +131,7 @@
   display: none;
 }
 .theme-switcher-sun-icon {
-  color: gold;
+  color: goldenrod;
   transition: 0.3s;
 }
 .theme-switcher-moon-icon {
